--- a/index.html
+++ b/index.html
@@ -7,7 +7,45 @@
 	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
+	<header>
+			<div class="container">
+					<h1 class="title">Harley mój</h1>
+					<p class="author">Dżem, <span class="italic">Ryszard Riedel</span></p>
+			</div>
+	</header>
+	
+	<section>
+			<div class="container">
+					<p class="content"> 
+					Kiedy siedzę na maszynie</br>
+					Totalny czuję luz</br>
+					Włączam silnik, daję kopa</br>
+					Za mną tylko kurz</br>
+					To wspaniała jest maszyna</br>
+					Choć ma już ze czterdzieści lat</br>
+					Stary mój ją też dosiadał</br>
+					To samo czuł mój starszy brat</br></br>
 
+					Harley mój, to jest to</br>
+					Kocham go, kocham go</br></br>
+
+					On zmienił moje życie odkąd</br>
+					Poskładałem go</br>
+					On wyleczył mnie z kompleksów</br>
+					Dał mi swoją moc</br>
+					Nigdy mnie nie zdradził</br>
+					Nie zawiódł ani raz</br>
+					To wspaniała jest maszyna</br>
+					Choć ma już ze czterdzieści lat</br>
+					</p>
+			</div>
+	</section>
+	
+	<footer>
+			<div class="container">
+				<p class="footer"> Dżem, <span class="italic">Spodek - Katowice, 1992</span></p>
+			</div>
+	</footer>
 	
 	
 </body>
